# neural-amp-modeler

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PLUGIN_GUIDE.md  PLUGIN_USAGE.md  README.md  README_NAS.md  README_REALTIME.md  REALTIME.md  REALTIME_IMPLEMENTATION.md  requirements.txt
.claude/: settings.local.json
configs/: config.yaml  config_realtime.yaml  config_spectral.yaml  search_config.yaml
models/flstudio_cpu_optimized/: best_model.pt  flstudio_cpu_optimized.json
models/flstudio_cpu_optimized2/: best_model.pt  flstudio_cpu_optimized2.json
models/flstudio_cpu_optimized3/: best_model.pt  flstudio_cpu_optimized3.json
models/flstudio_cpu_optimized4/: best_model.pt  flstudio_cpu_optimized4.json
models/flstudio_cpu_optimized5/: best_model.pt  flstudio_cpu_optimized5.json
models/flstudio_cpu_optimized6/: best_model.pt  flstudio_cpu_optimized6.json
models/flstudio_normalized_levels/: best_model.pt  flstudio_normalized_levels.json
models/flstudio_test/: best_model.pt  flstudio_test.json
models/flstudio_test2/: best_model.pt  flstudio_test2.json
models/flstudio_test3/: best_model.pt  flstudio_test3.json
models/flstudio_test4/: best_model.pt  flstudio_test4.json
models/realtime_6layer/: best_model.onnx  best_model.onnx.data  best_model.pt  realtime_6layer.json  realtime_6layer_weights.json
models/ts9_pushed/: best_model.pt
plugin/: BUILD_OPTIMIZED.md  CMakeLists.txt  README.md
plugin/Source/: ModelLoader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
runs/flstudio_cpu_optimized/: events.out.tfevents.1761721366.DESKTOP-K2E8BVN.19988.0
runs/flstudio_cpu_optimized2/: events.out.tfevents.1761721797.DESKTOP-K2E8BVN.9944.0
runs/flstudio_cpu_optimized3/: events.out.tfevents.1761722079.DESKTOP-K2E8BVN.18968.0
runs/flstudio_cpu_optimized4/: events.out.tfevents.1761722163.DESKTOP-K2E8BVN.28512.0
runs/flstudio_cpu_optimized5/: events.out.tfevents.1761722312.DESKTOP-K2E8BVN.21304.0
runs/flstudio_cpu_optimized6/: events.out.tfevents.1761723000.DESKTOP-K2E8BVN.11724.0  events.out.tfevents.1761723538.DESKTOP-K2E8BVN.9764.0
runs/flstudio_normalized_levels/: events.out.tfevents.1761723933.DESKTOP-K2E8BVN.10300.0  events.out.tfevents.1761762117.DESKTOP-K2E8BVN.14256.0  events.out.tfevents.1761763363.DESKTOP-K2E8BVN.3012.0
runs/flstudio_test/: events.out.tfevents.1761700154.DESKTOP-K2E8BVN.9640.0  events.out.tfevents.1761719316.DESKTOP-K2E8BVN.27508.0  events.out.tfevents.1761761317.DESKTOP-K2E8BVN.6488.0  events.out.tfevents.1761762079.DESKTOP-K2E8BVN.7752.0
runs/flstudio_test2/: events.out.tfevents.1761719632.DESKTOP-K2E8BVN.23304.0
runs/flstudio_test3/: events.out.tfevents.1761720097.DESKTOP-K2E8BVN.27756.0
runs/flstudio_test4/: events.out.tfevents.1761720693.DESKTOP-K2E8BVN.996.0
runs/realtime_6layer/: events.out.tfevents.1761701892.DESKTOP-K2E8BVN.25880.0  events.out.tfevents.1761717402.DESKTOP-K2E8BVN.14676.0  events.out.tfevents.1761719022.DESKTOP-K2E8BVN.5752.0  events.out.tfevents.1761719213.DESKTOP-K2E8BVN.12312.0
runs/ts9_pushed/: events.out.tfevents.1761698819.DESKTOP-K2E8BVN.27212.0  events.out.tfevents.1761698876.DESKTOP-K2E8BVN.18736.0
src/: analyze_results.py  batch_export_models.py  benchmark.py  compare_audio.py  dataset.py  export_plugin_weights.py  inference.py  inspect_audio.py  model.py  multi_train.py  normalize_training_data.py  realtime_demo.py  search_space.py  train.py  verify_data.py
